--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">parc</string>
+    <string name="app_name">Parc</string>
     <string name="car_number">car number</string>
     <string name="phone_number">Phone Number</string>
     <string name="text_view">TextView</string>
